--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="Sencha/resources/css/sencha-touch.css" type="text/css">
     <script type="text/javascript" src="Sencha/sencha-touch-all-debug.js"></script>
     <script type="text/javascript" src="app.js"></script>
-    
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 </head>
 <body></body>
 </html>
